# model/pay_slip.model.js
@@ -1,2 +1,34 @@
+const mongoose = require("mongoose");
 
+const schema = new mongoose.Schema({
+    payPeriod: {
+        type: String
+    },
+    paymentDate: {
+        type: String
+    },
+    paidDays: {
+        type: String
+    },
+    lossOfPayDaysAndHour: {
+        type: String
+    },
+    incomeTax: {
+        type: String
+    },
+    loss: {
+        type: String
+    },
+    pf: {
+        type: String
+    },
+    performanceAndSpecialAllowens: {
+        type: String
+    },
+    tatalAmount: {
+        type: String
+    }
+})
 
+const payment = new mongoose.model('payment', schema)
+module.exports = payment
